fix medrec spacing more

--- a/app/styles/medicalRecord.scss
+++ b/app/styles/medicalRecord.scss
@@ -92,4 +92,12 @@ margin-top: 5rem;
 
 .bcsInput{
     margin-left: 1rem;
+    width: 80px;
+}
+.denominator{
+    margin-left: 1.5rem;
+}
+
+.summaryInput{
+  width: 220px
 }
